fixed overflow issue

--- a/psucculint/style/index.css
+++ b/psucculint/style/index.css
@@ -24,6 +24,7 @@ body{
     background-color: var(--secondaryColor);
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
 }
 
 /* 2. Fonts & Colors */
